[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cronhive"
version = "0.1.0"
description = "A reliable job scheduling and webhook delivery service."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "sqlmodel>=0.0.19",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.7",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.3",
    "croniter>=2.0.5",
    "pydantic-settings>=2.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "locust>=2.29.0",
    "ruff>=0.4.8",
]
